@@ -1,0 +1,21 @@
+#!/bin/sh
+#
+# GeoIP update script for Denora Stats.
+# Usage: add a line like this to your crontab:
+# 10 3 5 * * /home/denora/stats/geoipupd >/dev/null 2>&1
+#
+# (c) 2011 Denora Team
+# Contact us at info@denorastats.org
+#
+# This program is free but copyrighted software;
+# see the file COPYING for details.
+#
+# $Id$
+#
+
+rm -f @DATDEST@/GeoIP*.dat
+wget -q http://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz -O @DATDEST@/GeoIP.dat.gz
+wget -q http://geolite.maxmind.com/download/geoip/database/GeoIPv6.dat.gz -O @DATDEST@/GeoIPv6.dat.gz
+gzip -qd @DATDEST@/GeoIP.dat.gz
+gzip -qd @DATDEST@/GeoIPv6.dat.gz
+@BINDEST@/denorarc rehash
